streaming version files only

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 기본 -->
-<title>CASP Protocol | 나의 음성 체계화 지수</title>
+<title>CASP Protocol_Extreme Range test</title>
 <meta name="description" content="여기를 눌러 테스트 해보세요." />
 
 <!-- Open Graph (카톡/스레드/페북) -->
