getMeta() → sid: s?.engine_sid || s?.sid (서버 sid 우선, 없으면 로컬 fallback)

--- a/public/extreme.html
+++ b/public/extreme.html
@@ -6,7 +6,7 @@
   <title>CASP Extreme v0 — Internal</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600;700&family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/styles/extreme.css">
+  <link rel="stylesheet" href="styles/extreme.css">
 </head>
 <body>
 <div class="page">
@@ -108,7 +108,7 @@
   </div>
 </div>
 
-<script src="/runtime-config.js"></script>
-<script type="module" src="/src/index.js"></script>
+<script src="runtime-config.js"></script>
+<script type="module" src="src/index.js"></script>
 </body>
 </html>
