--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="refresh" content="0; url=/extreme.html" />
+    <script src="/runtime-config.js"></script>
+
     <title>Redirecting…</title>
   </head>
   <body>
